# heyii

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DIGITAL_OCEAN_DEPLOY.md  Dockerfile  GUIDE_DEPLOIEMENT.md  Makefile  README.md  SERVICES.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  teljy.py
.github/workflows/: ci.yml
docs/: IMPLEMENTATIONS.md  INDEX.md  README.md
docs/api/: rest-api.md  schemas.md  websocket-api.md
docs/architecture/: overview.md
docs/development/: demo-mode.md  guide.md  testing.md
docs/modules/: agent.md  audio.md  business.md  data.md  integrations.md  services.md  utils.md
infrastructure/monitoring/: prometheus.yml
infrastructure/terraform/: terraform_complete.tf  terraform_modules.tf
scripts/: check_server.sh  index_products.py  seed_data.py  setup_db.py  test_demo_mode.py  test_services.py
src/: __init__.py
src/agent/: __init__.py  call_manager.py  dialogue_manager.py  orchestrator.py  session.py  state_machine.py
src/api/: __init__.py  main.py
src/audio/: __init__.py  buffer.py  format_converter.py  recorder.py  stream_processor.py  vad.py
src/business/: __init__.py  order_service.py  pharmacy_service.py  product_service.py  validation_service.py
src/core/: __init__.py  config.py
src/data/: __init__.py  database.py
src/demo/: __init__.py  demo_order_service.py  mock_erp_client.py  notification_handler.py
src/integrations/: __init__.py
src/monitoring/: __init__.py  health_checker.py
tests/: conftest.py
(+81 files in other folders)
